# invenio-db

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.mysql-5.7.sh  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  RELEASE-NOTES.rst  alembic.rst  constraints-min.txt  docker-services.yml  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/: alembic.rst  api.rst  conf.py  configuration.rst  index.rst  session_management.rst  usage.rst
example/: app.py
examples/: app.py
invenio_db/: __init__.py  cli.py  core.py  ext.py  proxies.py  shared.py  uow.py  utils.py  version.py
invenio_db/alembic/: 35c1075e6360_force_naming_convention.py  96e796392533_create_database_migrations.py  dbdbc1b19cf2_create_transaction_table.py  script.py.mako
invenio_db/services/: uow.py
tests/: conftest.py  mocks.py  test_alembic_choice.py  test_db.py  test_examples_app.py  test_lock_timeout.py  test_uow.py  test_utc.py  test_utils.py  test_versioning.py  test_versions.py  utils.py
tests/demo/: __init__.py  child.py  parent.py  versioned_a.py  versioned_b.py  with_choice.py
tests/demo/alembic/: __init__.py
