# SPDX-FileCopyrightText: 2015-2022 CERN.
# SPDX-FileCopyrightText: 2021 Northwestern University.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-FileCopyrightText: 2022 RERO.
# SPDX-FileCopyrightText: 2026 TU Wien.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-db"
description = "Database management for Invenio."
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "database",
  "invenio",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "alembic>=1.10.0",
  # https://flask-alembic.readthedocs.io/en/stable/changes/#version-3-2-0 - breaks CI with incompatible changes on the upgrade command
  "flask-alembic>=3.0.0,<3.2.0",
  "flask-sqlalchemy>=3.0",
  "invenio-base>=2.3.0,<3.0.0",
  "sqlalchemy-continuum>=1.3.12,<1.6.0",
  "sqlalchemy-utils>=0.33.1,<0.42.0",
  "sqlalchemy[asyncio]>=2.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/invenio-db"

[project.entry-points."invenio_base.api_apps"]
invenio_db = "invenio_db:InvenioDB"

[project.entry-points."invenio_base.apps"]
invenio_db = "invenio_db:InvenioDB"

[project.optional-dependencies]
mysql = [
  "pymysql>=0.10.1",
]
postgresql = [
  "psycopg2>=2.8.6",
]
tests = [
  "cryptography>=2.1.4",
  "pytest-black-ng>=0.4.0",
  "pytest-invenio>=3.0.0,<4.0.0",
  "six>=1.0.0",
  "sphinx>=4.5.0",
]
versioning = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "invenio_db/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_db",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401,D202"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --cov=invenio_db --cov=invenio_db/alembic --cov-report=term-missing'
testpaths = "tests invenio_db"
live_server_scope = "module"
